--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.18",
         "@heroicons/react": "^2.1.1",
         "@tailwindcss/forms": "^0.5.7",
         "react": "^18.2.0",
